<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66c1ff"

    tools:context="com.example.maor.trivia.MenuActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/image_profile"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />

        <TextView
            android:layout_marginTop="5sp"
            android:id="@+id/edit_profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   Edit profile"
            android:textSize="10sp"/>


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="70dp"

        >


        <Button
            android:id="@+id/playNow"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="7dp"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:background="@drawable/shape"
            android:text="@string/playNow" />

        <Button
            android:id="@+id/yourStats"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_toRightOf="@id/playNow"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="7dp"
            android:background="@drawable/shape"
            android:text="@string/yourStats" />

        <Button
            android:id="@+id/leaderboard"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:background="@drawable/shape"
            android:text="@string/leaderboard"
            android:layout_below="@id/yourStats"
            android:layout_marginLeft="7dp"
            android:layout_toRightOf="@+id/settings"/>


        <Button
            android:id="@+id/settings"
            android:layout_marginLeft="40dp"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:background="@drawable/shape"
            android:text="@string/settings"
            android:layout_below="@id/playNow"/>




    </RelativeLayout>





</RelativeLayout>
