<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66c1ff"

    tools:context="com.example.maor.trivia.QuickGameActivity">

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"

        android:text="@string/score" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answer1"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/score"
        android:layout_marginStart="138dp"
        android:hint="@string/question"
        android:textSize="20dp" />

    <Button
        android:id="@+id/answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer"
        android:layout_centerVertical="true"
        android:background="@drawable/shape"

        />

    <Button
        android:id="@+id/answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/answer1"
        android:hint="@string/answer"
        android:background="@drawable/shape"

        />

    <Button
        android:id="@+id/answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/answer2"
        android:hint="@string/answer"
        android:background="@drawable/shape"

        />

    <Button
        android:id="@+id/answer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/answer3"
        android:hint="@string/answer"
        android:background="@drawable/shape"

        />

</RelativeLayout>
